--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <div class="titlebar">
-        <div class="control-container">
+        <div class="control-container" style="margin-top: .25rem;">
             <img class="win-control" src="./assets/minimize.svg" alt="Minimize">
-            <img class="win-control" src="./assets/maximize.svg" alt="Maximize" style="width: 35px; height: 35px; margin-bottom: 1px;">
+            <img class="win-control" src="./assets/maximize.svg" alt="Maximize" style="width: 25px; height: 25px; margin-bottom: 2px;">
             <img class="win-control" src="./assets/close.svg" alt="Close">
         </div>
     </div>
